--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Regna Bootstrap Template</title>
+  <title>WoodenGold</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -43,7 +43,7 @@
       <div id="logo" class="pull-left">
         <!-- <a href="#hero"><img src="img/logo.png" alt="" title="" /></img></a> -->
         <!-- Uncomment below if you prefer to use a text logo -->
-        <h1><a href="#hero">WGold</a></h1>
+        <h1><a href="#hero">WoodenGold</a></h1>
       </div>
 
       <nav id="nav-menu-container">
@@ -97,7 +97,7 @@
         <div class="row about-container">
 
           <div class="col-lg-6 content order-lg-1 order-2">
-            <h2 class="title">Кратко о нас</h2>
+            <h2 class="title">Кратко о Hас</h2>
             <p>
               Наша компания Woodengold занимается производством деревянной мебели и столярных изделий по индивидуальным проектам из массива ценных пород древесины с 1998 года.<br />
               Мы изготовливаем интерьеры и высококачественную мебель любой сложности по индивидуальным заказам под ключ для домов, квартир, офисов, баров, ресторанов, гостиниц. 
@@ -107,19 +107,19 @@
             <div class="icon-box wow fadeInUp">
               <div class="icon"><i class="fa fas fa-briefcase"></i></div>
               <h4 class="title"><a href="">Индивидуальный подход</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <p class="description">Индивидуальный подход к заказчику – наша козырная карта.</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
               <div class="icon"><i class="fa fas fa-thumbs-up"></i></div>
               <h4 class="title"><a href="">Лучшее качество</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <p class="description">Мы используем в столярном производстве собственные пиломатериалы – дуб, клен, ясень, черешня, орех. Особое внимание уделяется качественной сушке, транспортировке и складировании материалов.</p>
             </div>
             
             <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
-                <div class="icon"><i class="fa fas fa-euro-sign"></i></div>
+                <div class="icon"><i class="fa fa-credit-card"></i></div>
               <h4 class="title"><a href="">Доступная цена</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <p class="description">Благодаря доступной цене, большому ассортименту, разнообразие стилей от классики до модерна мебель компании WoodenGold пользуется большим спросом.</p>
             </div>
 
           </div>
@@ -472,7 +472,7 @@
       </div>
 
       <!-- Uncomment below if you wan to use dynamic maps -->
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22864.11283411948!2d-73.96468908098944!3d40.630720240038435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbg!4v1540447494452" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d99036.6104245689!2d30.478983346290743!3d50.348284919233976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4b9d5dc1265fd%3A0x44abecbf19163688!2zNTDCsDE3JzAzLjciTiAzMMKwMjUnMTYuMiJF!5e0!3m2!1sru!2sua!4v1543311864308" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
 
       <div class="container wow fadeInUp mt-5">
         <div class="row justify-content-center">
@@ -550,10 +550,10 @@
     </div>
 
     <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong>Regna</strong>. All Rights Reserved
-      </div>
-      <div class="credits">
+      <!-- <div class="copyright">
+        &copy; Copyright <strong>WoodenGold</strong>. All Rights Reserved
+      </div> -->
+      <div class="credits" style="display:none">
         <!--
           All the links in the footer should remain intact.
           You can delete the links only if you purchased the pro version.
