--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div id="logo" class="pull-left">
         <!-- <a href="#hero"><img src="img/logo.png" alt="" title="" /></img></a> -->
         <!-- Uncomment below if you prefer to use a text logo -->
-        <h1><a href="#hero">WoodenGold</a></h1>
+        <h1><a href="#hero"><strong>Woodengold</strong></a></h1>
       </div>
 
       <nav id="nav-menu-container">
@@ -81,7 +81,7 @@
   ============================-->
   <section id="hero">
     <div class="hero-container">
-      <h1>WoodenGold</h1>
+      <h1><strong>Woodengold</strong></h1>
       <h2>Мы не были первыми, но стали лучшими</h2>
       <a href="#about" class="btn-get-started">Далее</a>
     </div>
@@ -97,17 +97,18 @@
         <div class="row about-container">
 
           <div class="col-lg-6 content order-lg-1 order-2">
-            <h2 class="title">Кратко о Hас</h2>
+            <h2 class="title">Коротко о Hас</h2>
             <p>
-              Наша компания Woodengold занимается производством деревянной мебели и столярных изделий по индивидуальным проектам из массива ценных пород древесины с 1998 года.<br />
-              Мы изготовливаем интерьеры и высококачественную мебель любой сложности по индивидуальным заказам под ключ для домов, квартир, офисов, баров, ресторанов, гостиниц. 
-              Наша мебель может быть встроена в уже готовый интерьер или может быть изготовлена вместе с интерьером.
+              Наша компания <strong>Woodengold</strong> занимается производством деревянной мебели и столярных изделий по индивидуальным проектам из массива ценных пород древесины с 1998 года.<br />
+              Мы изготовливаем интерьеры и высококачественную мебель любой сложности по индивидуальным заказам под ключ для домов, квартир, офисов, баров, ресторанов, гостиниц.
             </p>
 
             <div class="icon-box wow fadeInUp">
               <div class="icon"><i class="fa fas fa-briefcase"></i></div>
               <h4 class="title"><a href="">Индивидуальный подход</a></h4>
-              <p class="description">Индивидуальный подход к заказчику – наша козырная карта.</p>
+              <p class="description">Индивидуальный подход к заказчику – наша козырная карта.<br/>
+                При работе с клиентами учитываются индивидуальные особенности пожеланий, задач, целей и результата.
+              </p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
@@ -119,7 +120,7 @@
             <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
                 <div class="icon"><i class="fa fa-credit-card"></i></div>
               <h4 class="title"><a href="">Доступная цена</a></h4>
-              <p class="description">Благодаря доступной цене, большому ассортименту, разнообразие стилей от классики до модерна мебель компании WoodenGold пользуется большим спросом.</p>
+              <p class="description">Благодаря доступной цене, большому ассортименту, разнообразие стилей от классики до модерна мебель компании <strong>Woodengold</strong> пользуется большим спросом.</p>
             </div>
 
           </div>
@@ -551,7 +552,7 @@
 
     <div class="container">
       <!-- <div class="copyright">
-        &copy; Copyright <strong>WoodenGold</strong>. All Rights Reserved
+        &copy; Copyright <strong><strong>Woodengold</strong></strong>. All Rights Reserved
       </div> -->
       <div class="credits" style="display:none">
         <!--
