--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css" />
 
   <!-- Libraries CSS Files -->
   <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -257,19 +258,151 @@
 
           <div class="col-lg-12">
             <ul id="portfolio-flters">
-              <li data-filter=".filter-app, .filter-card, .filter-logo, .filter-web" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-logo">Logo</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-interior, .filter-home, .filter-business, .filter-web" class="filter-active">Все</li>
+              <li data-filter=".filter-interior">Интерьер</li>
+              <li data-filter=".filter-home">Для Дома</li>
+              <li data-filter=".filter-business">Для Работы</li>
+              <!-- <li data-filter=".filter-web">Web</li> -->
             </ul>
           </div>
         </div>
 
-        <div class="row" id="portfolio-wrapper">
-          <div class="col-lg-3 col-md-6 portfolio-item filter-app">
+
+        <section class="gallery-block compact-gallery">
+            <div class="container">
+                <div class="row no-gutters">
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-interior">
+                        <a class="lightbox" href="img/portfolio/interior1.jpg">
+                            <img class="img-fluid image" src="img/portfolio/interior1.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-interior">
+                        <a class="lightbox" href="img/portfolio/interior2.jpg">
+                            <img class="img-fluid image" src="img/portfolio/interior2.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-interior">
+                        <a class="lightbox" href="img/portfolio/interior3.jpg">
+                            <img class="img-fluid image" src="img/portfolio/interior3.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-interior">
+                        <a class="lightbox" href="img/portfolio/interior4.jpg">
+                            <img class="img-fluid image" src="img/portfolio/interior4.jpg">
+                            </a>
+                        </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-interior">
+                        <a class="lightbox" href="img/portfolio/interior5.jpg">
+                            <img class="img-fluid image" src="img/portfolio/interior5.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-interior">
+                        <a class="lightbox" href="img/portfolio/interior6.jpg">
+                            <img class="img-fluid image" src="img/portfolio/interior6.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-home">
+                        <a class="lightbox" href="img/portfolio/home1.jpg">
+                            <img class="img-fluid image" src="img/portfolio/home1.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-home">
+                        <a class="lightbox" href="img/portfolio/home2.jpg">
+                            <img class="img-fluid image" src="img/portfolio/home2.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-home">
+                        <a class="lightbox" href="img/portfolio/home3.jpg">
+                            <img class="img-fluid image" src="img/portfolio/home3.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-home">
+                        <a class="lightbox" href="img/portfolio/home4.jpg">
+                            <img class="img-fluid image" src="img/portfolio/home4.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-home">
+                        <a class="lightbox" href="img/portfolio/home5.jpg">
+                            <img class="img-fluid image" src="img/portfolio/home5.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-home">
+                        <a class="lightbox" href="img/portfolio/home6.jpg">
+                            <img class="img-fluid image" src="img/portfolio/home6.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-home">
+                        <a class="lightbox" href="img/portfolio/home7.jpg">
+                            <img class="img-fluid image" src="img/portfolio/home7.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-home">
+                        <a class="lightbox" href="img/portfolio/home8.jpg">
+                            <img class="img-fluid image" src="img/portfolio/home8.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-home">
+                        <a class="lightbox" href="img/portfolio/home9.jpg">
+                            <img class="img-fluid image" src="img/portfolio/home9.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-home">
+                        <a class="lightbox" href="img/portfolio/home10.jpg">
+                            <img class="img-fluid image" src="img/portfolio/home10.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-home">
+                        <a class="lightbox" href="img/portfolio/home11.jpg">
+                            <img class="img-fluid image" src="img/portfolio/home11.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-home">
+                        <a class="lightbox" href="img/portfolio/home12.jpg">
+                            <img class="img-fluid image" src="img/portfolio/home12.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                        <a class="lightbox" href="img/portfolio/business1.jpg">
+                            <img class="img-fluid image" src="img/portfolio/business1.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                        <a class="lightbox" href="img/portfolio/business2.jpg">
+                            <img class="img-fluid image" src="img/portfolio/business2.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                        <a class="lightbox" href="img/portfolio/business3.jpg">
+                            <img class="img-fluid image" src="img/portfolio/business3.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                        <a class="lightbox" href="img/portfolio/business4.jpg">
+                            <img class="img-fluid image" src="img/portfolio/business4.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                        <a class="lightbox" href="img/portfolio/business5.jpg">
+                            <img class="img-fluid image" src="img/portfolio/business5.jpg">
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                        <a class="lightbox" href="img/portfolio/business6.jpg">
+                            <img class="img-fluid image" src="img/portfolio/business6.jpg">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
+        <script>
+            baguetteBox.run('.compact-gallery', { animation: 'slideIn'});
+        </script>
+
+        <!-- <div class="row" id="portfolio-wrapper">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-interior">
             <a href="">
-              <img src="img/portfolio/app1.jpg" alt="">
+              <img src="img/portfolio/interior1.jpg" alt="">
               <div class="details">
                 <h4>App 1</h4>
                 <span>Alored dono par</span>
@@ -287,9 +420,9 @@
             </a>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-interior">
             <a href="">
-              <img src="img/portfolio/app3.jpg" alt="">
+              <img src="img/portfolio/interior2.jpg" alt="">
               <div class="details">
                 <h4>App 3</h4>
                 <span>Alored dono par</span>
@@ -337,9 +470,9 @@
             </a>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-interior">
             <a href="">
-              <img src="img/portfolio/app2.jpg" alt="">
+              <img src="img/portfolio/interior3.jpg" alt="">
               <div class="details">
                 <h4>App 2</h4>
                 <span>Alored dono par</span>
@@ -375,9 +508,9 @@
                 <span>Alored dono par</span>
               </div>
             </a>
-          </div>
+          </div> -->
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
+          <!-- <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
             <a href="">
               <img src="img/portfolio/logo2.jpg" alt="">
               <div class="details">
@@ -385,7 +518,7 @@
                 <span>Alored dono par</span>
               </div>
             </a>
-          </div>
+          </div> -->
 
         </div>
 
@@ -468,48 +601,47 @@
     <section id="contact">
       <div class="container wow fadeInUp">
         <div class="section-header">
-          <h3 class="section-title">Contact</h3>
-          <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <h3 class="section-title">Контакты</h3>
+          <p class="section-description">Свяжитесь с нами любым удобным способом и Вы получить все ответы на свои вопросы</p>
         </div>
       </div>
 
       <!-- Uncomment below if you wan to use dynamic maps -->
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d99036.6104245689!2d30.478983346290743!3d50.348284919233976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4b9d5dc1265fd%3A0x44abecbf19163688!2zNTDCsDE3JzAzLjciTiAzMMKwMjUnMTYuMiJF!5e0!3m2!1sru!2sua!4v1543311864308" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
-
       <div class="container wow fadeInUp mt-5">
         <div class="row justify-content-center">
 
-          <div class="col-lg-3 col-md-4">
+          <div class="col-lg-3 col-md-3">
 
             <div class="info">
               <div>
                 <i class="fa fa-map-marker"></i>
-                <p>A108 Adam Street<br>New York, NY 535022</p>
+                <p>Киевская обл.<br>с.Иванковичи<br>ул.Ворошилова 47</p>
               </div>
 
               <div>
                 <i class="fa fa-envelope"></i>
-                <p>info@example.com</p>
+                <p>valentin97@ukr.net</p>
               </div>
 
               <div>
                 <i class="fa fa-phone"></i>
-                <p>+1 5589 55488 55s</p>
+                <p>+38 (066) 394-67-54</p>
               </div>
             </div>
 
-            <div class="social-links">
+            <!-- <div class="social-links">
               <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
               <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
               <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
               <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
               <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-            </div>
+            </div> -->
 
           </div>
 
-          <div class="col-lg-5 col-md-8">
-            <div class="form">
+          <div class="col-lg-9 col-md-9">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d99036.6104245689!2d30.478983346290743!3d50.348284919233976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4b9d5dc1265fd%3A0x44abecbf19163688!2zNTDCsDE3JzAzLjciTiAzMMKwMjUnMTYuMiJF!5e0!3m2!1sru!2sua!4v1543311864308" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <!-- <div class="form">
               <div id="sendmessage">Your message has been sent. Thank you!</div>
               <div id="errormessage"></div>
               <form action="" method="post" role="form" class="contactForm">
@@ -531,7 +663,7 @@
                 </div>
                 <div class="text-center"><button type="submit">Send Message</button></div>
               </form>
-            </div>
+            </div> -->
           </div>
 
         </div>
