--- a/index.html
+++ b/index.html
@@ -535,21 +535,49 @@
           <p class="section-description">Мы гордимся компанией в которой работаем</p>
         </div>
         <div class="row">
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-4 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/team-1.jpg" alt=""></div>
-              <h4>Walter White</h4>
-              <span>Chief Executive Officer</span>
-              <div class="social">
+              <div class="pic"><img src="img/team1.jpg" alt=""></div>
+              <h4>Николай Субботин</h4>
+              <span>Директор по работе с клиентами</span>
+              <!-- <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-facebook"></i></a>
                 <a href=""><i class="fa fa-google-plus"></i></a>
                 <a href=""><i class="fa fa-linkedin"></i></a>
-              </div>
+              </div> -->
+            </div>
+          </div>
+          
+          <div class="col-lg-4 col-md-6">
+            <div class="member">
+              <div class="pic"><img src="img/team1.jpg" alt=""></div>
+              <h4>Евгений Огородник</h4>
+              <span>Технический Директор</span>
+              <!-- <div class="social">
+                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-facebook"></i></a>
+                <a href=""><i class="fa fa-google-plus"></i></a>
+                <a href=""><i class="fa fa-linkedin"></i></a>
+              </div> -->
+            </div>
+          </div>
+          
+          <div class="col-lg-4 col-md-6">
+            <div class="member">
+              <div class="pic"><img src="img/team1.jpg" alt=""></div>
+              <h4>Валентин Сергеевич</h4>
+              <span>Дизайнер</span>
+              <!-- <div class="social">
+                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-facebook"></i></a>
+                <a href=""><i class="fa fa-google-plus"></i></a>
+                <a href=""><i class="fa fa-linkedin"></i></a>
+              </div> -->
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6">
+          <!-- <div class="col-lg-3 col-md-6">
             <div class="member">
               <div class="pic"><img src="img/team-2.jpg" alt=""></div>
               <h4>Sarah Jhinson</h4>
@@ -589,7 +617,7 @@
                 <a href=""><i class="fa fa-linkedin"></i></a>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
 
       </div>
