--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css" />
+  <link rel="stylesheet" href="css/spinner.css" />
 
   <!-- Libraries CSS Files -->
   <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -34,13 +35,15 @@
 </head>
 
 <body>
-
+    <div id="preloader">
+      <img id="spinnerimg" src="img/spinner2.png" alt="" width="120" height="120">
+    </div>
   <!--==========================
   Header
   ============================-->
   <header id="header">
     <div class="container">
-
+      
       <div id="logo" class="pull-left">
         <!-- <a href="#hero"><img src="img/logo.png" alt="" title="" /></img></a> -->
         <!-- Uncomment below if you prefer to use a text logo -->
