--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
             <div class="member">
               <div class="pic"><img src="img/team1.jpg" alt=""></div>
               <h4>Николай Субботин</h4>
-              <span>Директор по работе с клиентами</span>
+              <span>Директор по развитию</span>
               <!-- <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-facebook"></i></a>
