--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <body>
     <div id="preloader">
-      <img id="spinnerimg" src="img/spinner2.png" alt="" width="120" height="120">
+      <img id="spinnerimg" src="img/spinner.png" alt="" width="200" height="200">
     </div>
   <!--==========================
   Header
