--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
                 <div class="icon"><i class="fa fa-credit-card"></i></div>
               <h4 class="title"><a href="">Доступная цена</a></h4>
-              <p class="description">Благодаря доступной цене, большому ассортименту, разнообразие стилей от классики до модерна мебель компании <strong>Woodengold</strong> пользуется большим спросом.</p>
+              <p class="description">Благодаря доступной цене, большому ассортименту, разнообразие стилей от классики до хай-тек, мебель компании <strong>Woodengold</strong> пользуется большим спросом.</p>
             </div>
 
           </div>
