Added new photos

--- a/index.html
+++ b/index.html
@@ -364,6 +364,36 @@
                             <img class="img-fluid image" src="img/portfolio/home12.jpg">
                         </a>
                     </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-home">
+                      <a class="lightbox" href="img/portfolio/home13.jpg">
+                          <img class="img-fluid image" src="img/portfolio/home13.jpg">
+                      </a>
+                  </div>
+                  <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-home">
+                    <a class="lightbox" href="img/portfolio/home14.jpg">
+                        <img class="img-fluid image" src="img/portfolio/home14.jpg">
+                    </a>
+                </div>
+                <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-home">
+                  <a class="lightbox" href="img/portfolio/home15.jpg">
+                      <img class="img-fluid image" src="img/portfolio/home15_prev.jpg">
+                  </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-home">
+                <a class="lightbox" href="img/portfolio/home16.jpg">
+                    <img class="img-fluid image" src="img/portfolio/home16.jpg">
+                </a>
+            </div>
+            <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-home">
+              <a class="lightbox" href="img/portfolio/home17.jpg">
+                  <img class="img-fluid image" src="img/portfolio/home17_prev.jpg">
+              </a>
+          </div>
+          <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-home">
+            <a class="lightbox" href="img/portfolio/home18.jpg">
+                <img class="img-fluid image" src="img/portfolio/home18.jpg">
+            </a>
+        </div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
                         <a class="lightbox" href="img/portfolio/business1.jpg">
                             <img class="img-fluid image" src="img/portfolio/business1.jpg">
