--- a/index.html
+++ b/index.html
@@ -440,6 +440,21 @@
                   <img class="img-fluid image" src="img/portfolio/home22.jpg">
                 </a>
               </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-home">
+                <a class="lightbox" href="img/portfolio/home23.jpg">
+                  <img class="img-fluid image" src="img/portfolio/home23_prev.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-home">
+                <a class="lightbox" href="img/portfolio/home24.jpg">
+                  <img class="img-fluid image" src="img/portfolio/home24_prev.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-home">
+                <a class="lightbox" href="img/portfolio/home25.jpg">
+                  <img class="img-fluid image" src="img/portfolio/home25_prev.jpg">
+                </a>
+              </div>
 
               <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
                 <a class="lightbox" href="img/portfolio/business1.jpg">
